--- a/react-ts/src/Stylesheets/EvaluationPage.module.css
+++ b/react-ts/src/Stylesheets/EvaluationPage.module.css
@@ -1,9 +1,28 @@
-.EvaluationPage{
-    font-size: 16px;
-    padding: 20px 20%;
+.EvaluationPage {
+  font-size: 16px;
+  padding: 20px 20%;
 }
 
-.RadioInputs{
-    display: grid;
-    justify-content: center;
+h1 {
+  font-size: 25px;
+  text-align: center;
+}
+
+.RadioInputs {
+  display: grid;
+  justify-content: center;
+}
+
+button {
+  background: none;
+  border: 1px solid black;
+  font-size: 15px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.columns {
+  float: left;
+  width: 50%;
+  text-align: center;
 }
